overflow fix: set max width for tablet

--- a/source/less/blocks/plans.less
+++ b/source/less/blocks/plans.less
@@ -128,6 +128,7 @@
     color: @basic-black;
     padding-left: 0;
     border-bottom: none;
+    width: 400px;
 
     br {
       display: block;
@@ -135,6 +136,8 @@
   }
 
   @media (min-width: @desktop-width) {
+    width: auto;
+
     br {
       display: none;
     }
